# full-stack-fastapi-postgresql

./: CONTRIBUTING.md  README.md
docs/: getting-started.md
{{cookiecutter.project_slug}}/: README.md  docker-compose.override.yml  docker-compose.yml
{{cookiecutter.project_slug}}/backend/: backend.dockerfile
{{cookiecutter.project_slug}}/backend/app/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/backend/app/alembic/: env.py
{{cookiecutter.project_slug}}/backend/app/app/: main.py  tests_pre_start.py
{{cookiecutter.project_slug}}/backend/app/app/api/: deps.py  sockets.py
{{cookiecutter.project_slug}}/backend/app/app/api/api_v1/endpoints/: login.py  proxy.py  users.py
{{cookiecutter.project_slug}}/backend/app/app/core/: config.py  security.py
{{cookiecutter.project_slug}}/backend/app/app/crud/: base.py  crud_user.py
{{cookiecutter.project_slug}}/backend/app/app/gdb/: base_node_class.py  init_gdb.py
{{cookiecutter.project_slug}}/backend/app/app/models/: user.py
{{cookiecutter.project_slug}}/backend/app/app/schemas/: base_schema.py  token.py  user.py
{{cookiecutter.project_slug}}/backend/app/app/utilities/: email.py
{{cookiecutter.project_slug}}/frontend/: Dockerfile  nuxt.config.ts  package.json
{{cookiecutter.project_slug}}/frontend/api/: auth.ts
{{cookiecutter.project_slug}}/frontend/components/authentication/: MagicLoginCard.vue  Navigation.vue
{{cookiecutter.project_slug}}/frontend/components/layouts/default/: Footer.vue  Navigation.vue
{{cookiecutter.project_slug}}/frontend/components/layouts/home/: Navigation.vue
{{cookiecutter.project_slug}}/frontend/components/locale/: LocaleDropdown.vue
{{cookiecutter.project_slug}}/frontend/components/moderation/: CreateUser.vue  ToggleActive.vue  ToggleMod.vue  UserTable.vue
{{cookiecutter.project_slug}}/frontend/components/settings/: Profile.vue  Security.vue
{{cookiecutter.project_slug}}/frontend/content/: about.md
{{cookiecutter.project_slug}}/frontend/interfaces/: index.ts
{{cookiecutter.project_slug}}/frontend/pages/: contact.vue  index.vue  login.vue  magic.vue  recover-password.vue  settings.vue
{{cookiecutter.project_slug}}/frontend/pages/blog/: index.vue
{{cookiecutter.project_slug}}/frontend/stores/: auth.ts  toasts.ts  tokens.ts
{{cookiecutter.project_slug}}/scripts/: deploy.sh
