[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "{{cookiecutter.first_superuser}}" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "inboard[fastapi]==0.68.*",
  "python-multipart>=0.0.9",
  "email-validator>=1.3.0",
  "requests>=2.31.0",
  "celery>=5.4.0",
  "passlib[bcrypt]>=1.7.4",
  "tenacity>=8.2.3",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1",
  "emails>=0.6.0",
  "raven>=6.10.0",
  "jinja2>=3.1.2",
  "alembic>=1.13.1",
  "sqlalchemy>=2.0.29",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.27.0",
  "neo4j>=5.19.0",
  "neomodel>=5.3.0",
  "psycopg[binary]>=3.1.18",
  "setuptools>=69.5.1",
  "pytest>=8.2.0",
]

[project.optional-dependencies]
checks = [
  "black>=24.4.2",
  "mypy>=1.10.0",
  "isort>=5.13.2",
  "autoflake>=2.3.1",
  "flake8>=7.0.0",
]

[project.urls]
Documentation = "https://github.com/unknown/app#readme"
Issues = "https://github.com/unknown/app/issues"
Source = "https://github.com/unknown/app"

[tool.hatch.version]
path = "app/__version__.py"

[dirs.env]
virtual = "./.venv"

[tool.hatch.envs.default]
python="3.11"  # <--
dev-mode = true
dependencies = []

[tool.hatch.build.targets.sdist]
include = ["/app"]

[tool.hatch.envs.production]
dev-mode = false
features = []
path = ".venv"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "isort>=5.11.2",
]
[tool.hatch.envs.lint.scripts]
style = [
  "isort --check --diff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "isort {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
src_paths = ["app", "tests"]

[tool.mypy]
files = ["**/*.py"]
plugins = "pydantic.mypy"
show_error_codes = true
strict = true
